Impementing further models for documentation
